--- a/calculator_app/index.html
+++ b/calculator_app/index.html
@@ -15,21 +15,21 @@
 <!-- button -->
             <div class="buttons">
                 <button id = "C" class="btn">C</button>
-                <button id = "div" class="btn">/</button>
-                <button id = "mul" class="btn">*</button>
-                <button id = " " class="btn">&larr;</button>
+                <button id = "div" class="btn oper">/</button>
+                <button id = "mul" class="btn oper">*</button>
+                <button id = "del" class="btn">&larr;</button>
                 <button id = " " class="btn">7</button>
                 <button id = " " class="btn">8</button>
                 <button id = " " class="btn">9</button>
-                <button id = " " class="btn">-</button>
+                <button id = " " class="btn oper">-</button>
                 <button id = " " class="btn">4</button>
                 <button id = " " class="btn">5</button>
                 <button id = " " class="btn">6</button>
-                <button id = " " class="btn">+</button>
+                <button id = " " class="btn oper">+</button>
                 <button id = " " class="btn">1</button>
                 <button id = " " class="btn">2</button>
                 <button id = " " class="btn">3</button>
-                <button id = " " class="btn">.</button>
+                <button id = " " class="btn oper">.</button>
                 <button id = " " class="btn">0</button>  
                 <button id = " " class="btn">(</button>
                 <button id = " " class="btn">)</button>
